# mevolib-ui

./: NOTICE  README.md
MEvoLibGUI/: .gitignore  .nextflow.log.1  .nextflow.log.2  .nextflow.log.3  .nextflow.log.4  .nextflow.log.5  .nextflow.log.6  .nextflow.log.7  .nextflow.log.8  .nextflow.log.9  db.sqlite3  dump.rdb  manage.py  nextflow  package-lock.json  pyproject.toml
MEvoLibGUI/.nextflow/: history
MEvoLibGUI/.nextflow/cache/02259524-6188-41c9-8440-437df60b9875/: index.desperate_swartz
MEvoLibGUI/.nextflow/cache/02b9f491-438f-433d-bb74-524b63e49b2b/: index.sharp_kalam
MEvoLibGUI/.nextflow/cache/044bef8b-ec84-4dd5-bb3b-257b07890606/: index.determined_dubinsky
MEvoLibGUI/.nextflow/cache/06682614-2563-4eeb-8559-6b631512eab9/: index.prickly_rosalind
MEvoLibGUI/.nextflow/cache/09aaf36f-750d-4582-81d1-f69060616426/: index.ecstatic_fermi
MEvoLibGUI/.nextflow/cache/100cfe4c-7077-4dd1-97f9-384c656c9466/: index.hungry_colden
MEvoLibGUI/.nextflow/cache/10386a37-0582-4089-b268-399d7eec0dc9/: index.adoring_payne
MEvoLibGUI/.nextflow/cache/11ef6b46-58e7-46a0-b203-2197b226dd5d/: index.angry_saha
MEvoLibGUI/.nextflow/cache/160a7801-a157-46e3-a2ff-14168ea55ab5/: index.nostalgic_swartz
MEvoLibGUI/.nextflow/cache/1710acfb-e0e2-4be8-91a5-aee7d685bd84/: index.fervent_kirch
MEvoLibGUI/.nextflow/cache/188528bd-4754-4b43-bb1b-165ca848e6e2/: index.exotic_feynman
MEvoLibGUI/.nextflow/cache/19114f45-1030-4a10-949b-1907df4666d2/: index.big_lovelace
MEvoLibGUI/.nextflow/cache/19486518-e3ef-4a36-a232-7a1fc6ad40ed/: index.gigantic_minsky
MEvoLibGUI/.nextflow/cache/1b1adbdd-9427-4fe4-ac36-197bc5b6f9bb/: index.distracted_wiles
MEvoLibGUI/.nextflow/cache/206f94d9-c9b8-4160-84f3-f4535bcd1332/: index.ecstatic_lamport
MEvoLibGUI/.nextflow/cache/234e2bef-fe61-41ab-bf7a-8bbe5bbfce2e/: index.happy_watson
MEvoLibGUI/.nextflow/cache/243cee00-953a-4f38-aaa2-d69896c16d1e/: index.scruffy_rubens
MEvoLibGUI/.nextflow/cache/267951ce-ec29-4fba-b115-e2d9fc7ebe9a/: index.hopeful_woese
MEvoLibGUI/.nextflow/cache/2c5ce85e-a5cc-4f05-bd5f-fa94f91479ed/: index.romantic_hodgkin
MEvoLibGUI/.nextflow/cache/31939892-d577-4ddd-bf71-12422dbcca82/: index.friendly_mendel
MEvoLibGUI/.nextflow/cache/31f58536-c47b-41f1-afd0-9597cf8ec526/: index.ridiculous_knuth
MEvoLibGUI/.nextflow/cache/36ac4a5f-30ab-41c9-b6e7-9b746d3b4ac0/: index.focused_avogadro
MEvoLibGUI/.nextflow/cache/3b34a94e-9b78-466e-a292-5f9e4e229cc4/: index.intergalactic_archimedes
MEvoLibGUI/.nextflow/cache/3c6a6320-8d8e-4794-b8f4-492730306785/: index.mighty_brattain
MEvoLibGUI/.nextflow/cache/3effc1a5-9aaf-4efc-b92b-a583c7471972/: index.exotic_wozniak
MEvoLibGUI/.nextflow/cache/42c9fc24-b5bd-427f-b48b-0ae436f3017f/: index.clever_albattani
MEvoLibGUI/.nextflow/cache/44c4f019-f30b-40ba-bf76-ff87e5690286/: index.distracted_nobel
MEvoLibGUI/.nextflow/cache/46c3202a-c92a-4741-875e-e1ca31687a2f/: index.extravagant_cantor
MEvoLibGUI/MEvoLibGUI/: __init__.py  asgi.py  celery.py  forms.py  settings.py  tasks.py  urls.py  wsgi.py
MEvoLibGUI/nextflowApp/: admin.py  apps.py  formats.py  models.py  tests.py  urls.py  views.py
MEvoLibGUI/nextflowApp/migrations/: 0001_initial.py  0002_alter_document_docfile.py  0003_alter_document_docfile.py  0004_alter_document_docfile.py  0005_alter_document_docfile.py  0006_alter_document_docfile.py  0007_alter_document_docfile.py  0008_alter_document_docfile.py  0009_alter_document_docfile.py  0010_alter_document_docfile.py  0011_document_filepath_alter_document_docfile.py  0012_inferencedocument_delete_document.py  0013_alter_inferencedocument_docfile.py  0014_alter_inferencedocument_docfile.py  0015_paraminferencedocument.py  0016_aligninferencedocument.py  0017_fullworkflowdocument.py
MEvoLibGUI/nextflowFiles/modules/: get_inference.nf
MEvoLibGUI/staticFiles/scripts/: alignAndInferenceCelery.js  fullWorkflow.js  fullWorkflowTask.js
MEvoLibGUI/staticFiles/styles/: global.css
(+338 files in other folders)
