# See the NOTICE file distributed with this work for additional information
# regarding copyright ownership.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# pyproject.toml -- MEvoLibGUI project configuration

## Generic configuration
[project]
name = "MEvoLibGUI"
version = "0.1"
requires-python = ">= 3.9"
description = "Graphical User Interface for a DNA analysis library (MEvoLib)"
readme = "README.md"
authors = [
    {name = "Sergio Moragon Jimenez", email = "smoragonj@gmail.com"}
]
license = {text = "Apache License 2.0"}
keywords = [
    "bioinformatics",
    "GUI",
    "MEvoLib",
]
dependencies = [
    "celery >= 5.3.6",
    "Django >= 4.2.7",
    "MEvoLib @ git+https://github.com/JAlvarezJarreta/mevolib",
    "nextflow >= 22.10.7",
    "nextflowpy >= 0.8.1",
    "python-dotenv >= 1.0.1",
    "redis >= 5.0.1",
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pylint",
    "python-dotenv",
    "types-requests",
]

[project.urls]
repository = "https://github.com/nachorequeno/mevolib-ui"

[tool.setuptools]
py-modules = []

[tool.pylint.messages_control]
max-line-length = 110
disable = [
    "invalid-name",
    "similarities",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-locals",
    "too-many-statements",
    "unspecified-encoding",
    "wildcard-import"
]

[tool.mypy]
ignore_missing_imports = true
warn_unused_configs = true

[tool.black]
line-length = 110